# agent_guardrail

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md  design.md  model_cache_and_migration.md  model_recommendations.md  real_model.md  test.md  threshold_analysis.md
scripts/: cache_model.py  evaluate_cases.py
src/agent_guardrail/: __init__.py  cli.py  config.py  evaluation.py  pipeline.py  types.py
src/agent_guardrail/layers/: __init__.py  base.py  cache.py  model.py  normalizer.py  rules.py
tests/: test_cli.py  test_evaluation.py  test_guardrail.py  test_transformers_detector.py
tests/fixtures/: prompt_injection_cases.json
