[project]
name = "agent-guardrail"
version = "0.1.0"
description = "User-input guardrails for LLM agents."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
hf = [
    "huggingface_hub>=0.20",
    "torch>=2.1",
    "transformers>=4.35",
]
modelscope = [
    "huggingface_hub>=0.20",
    "modelscope>=1.14",
    "torch>=2.1",
    "transformers>=4.35",
]

[project.scripts]
agent-guardrail = "agent_guardrail.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
